[gd_scene load_steps=5 format=3 uid="uid://db3nvolhew0oi"]

[ext_resource type="Script" path="res://main/ui/statbox/statbox.gd" id="1_qhtpu"]
[ext_resource type="Theme" uid="uid://cwrkv7lqfv2jk" path="res://main/ui/theme.tres" id="2_scapn"]
[ext_resource type="Texture2D" uid="uid://inyumrwwgls7" path="res://main/dungeon/player/player_dex.png" id="3_vy16f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkr3i"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)

[node name="StatBox" type="PanelContainer"]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 29.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xkr3i")
script = ExtResource("1_qhtpu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_scapn")

[node name="PlayerIcon" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("3_vy16f")

[node name="StatContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="StatLabels" type="Label" parent="PanelContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.529412, 0.568627, 0.533333, 1)
theme_override_constants/line_spacing = 0
text = "life:
strength:
wisdom:
"
visible_characters_behavior = 1

[node name="StatValues" type="Label" parent="PanelContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.529412, 0.568627, 0.533333, 1)
theme_override_constants/line_spacing = 0
text = "99/99
3
3"
visible_characters_behavior = 1
